--- a/cloned/web/index.html
+++ b/cloned/web/index.html
@@ -11,6 +11,6 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>github rocks</div>
+        <div>hola salvaje</div>
     </body>
 </html>
